--- a/ChronoKeep/UI/API/APIErrorPage.xaml
+++ b/ChronoKeep/UI/API/APIErrorPage.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="Chronokeep.UI.API.APIErrorPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.API.APIErrorPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.API"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="300"
       Title="APIErrorPage">
-
     <Grid>
         <TextBlock Name="errorLabel" Text="Error, unable to continue." TextWrapping="Wrap" MaxWidth="250" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
-</Page>
+</ui:UiPage>
