--- a/ChronoKeep/UI/API/APIPage1.xaml
+++ b/ChronoKeep/UI/API/APIPage1.xaml
@@ -1,20 +1,24 @@
-﻿<Page x:Class="Chronokeep.UI.API.APIPage1"
+﻿<ui:UiPage x:Class="Chronokeep.UI.API.APIPage1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.API"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="300"
       Title="APIPage1">
-
     <Grid>
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2">
             <Label Content="Select API to use:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,10"/>
             <ComboBox Name="APIBox" Width="200" VerticalAlignment="Center" />
         </StackPanel>
-        <Button x:Name="unlinkButton" Content="Unlink API" Height="25" Width="100" VerticalAlignment="Bottom" Margin="0,0,0,50" Click="Unlink_Click" Visibility="Collapsed" />
-        <Button Content="Next" Height="25" Width="100" VerticalAlignment="Bottom" Margin="0,0,150,10" Click="Next_Click" />
-        <Button Content="Cancel" Height="25" Width="100" VerticalAlignment="Bottom" Margin="150,0,0,10" Click="Cancel_Click" />
+        <Button x:Name="unlinkButton" Content="Unlink API" Height="35" Width="100" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,50" Click="Unlink_Click" Visibility="Collapsed" Grid.ColumnSpan="2"/>
+        <Button Content="Next" Height="35" Width="100" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10" Click="Next_Click"  Grid.Column="0"/>
+        <Button Content="Cancel" Height="35" Width="100" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,10" Click="Cancel_Click" Grid.Column="1"/>
     </Grid>
-</Page>
+</ui:UiPage>
