--- a/ChronoKeep/UI/API/APIPage2.xaml
+++ b/ChronoKeep/UI/API/APIPage2.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="Chronokeep.UI.API.APIPage2"
+﻿<ui:UiPage x:Class="Chronokeep.UI.API.APIPage2"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.API"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="300"
       Title="APIPage2">
@@ -11,20 +12,20 @@
     <Grid>
         <TextBlock Name="holdingLabel" Text="Retrieving Events, Please Hold." FontSize="18" VerticalAlignment="Center" MaxWidth="250" HorizontalAlignment="Center" TextWrapping="Wrap" Visibility="Visible"/>
         <StackPanel Name="eventPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed">
-            <Label Content="Select Event to link to:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,10"/>
+            <TextBlock Text="Select Event to link to:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,10"/>
             <ComboBox Name="EventBox" Width="200" VerticalAlignment="Center" Margin="0,0,0,10" SelectionChanged="EventBox_SelectionChanged"/>
             <StackPanel x:Name="newPanel" Visibility="Collapsed">
-                <Label Content="New Event:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+                <TextBlock Text="New Event:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,5"/>
                 <DockPanel Margin="0,0,0,5">
-                    <Label Content="Name" FontSize="15" Width="100" VerticalAlignment="Center" HorizontalContentAlignment="Right" Padding="0,0,5,0"/>
+                    <TextBlock Text="Name" FontSize="15" Width="100" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
                     <TextBox x:Name="nameBox" FontSize="15" Width="180" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <Label Content="Slug" FontSize="15" Width="100" VerticalAlignment="Center" HorizontalContentAlignment="Right" Padding="0,0,5,0"/>
+                    <TextBlock Text="Slug" FontSize="15" Width="100" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
                     <TextBox Name="slugBox" FontSize="15" Width="180" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <Label Content="Contact Email" FontSize="15" Width="100" VerticalAlignment="Center" HorizontalContentAlignment="Right" Padding="0,0,5,0"/>
+                    <TextBlock Text="Contact Email" FontSize="15" Width="100" VerticalAlignment="Center" TextAlignment="Right" Padding="0,0,5,0"/>
                     <TextBox Name="contactBox" FontSize="15" Width="180" VerticalAlignment="Center" HorizontalAlignment="Center" />
                 </DockPanel>
                 <DockPanel>
@@ -32,7 +33,7 @@
                 </DockPanel>
             </StackPanel>
         </StackPanel>
-        <Button Content="Next" Height="25" Width="100" VerticalAlignment="Bottom" Margin="0,0,150,10" Click="Next_Click" />
-        <Button Content="Cancel" Height="25" Width="100" VerticalAlignment="Bottom" Margin="150,0,0,10" Click="Cancel_Click" />
+        <Button Content="Next" Height="35" Width="100" VerticalAlignment="Bottom" Margin="0,0,150,10" Click="Next_Click" />
+        <Button Content="Cancel" Height="35" Width="100" VerticalAlignment="Bottom" Margin="150,0,0,10" Click="Cancel_Click" />
     </Grid>
-</Page>
+</ui:UiPage>
