--- a/ChronoKeep/UI/API/APIWindow.xaml
+++ b/ChronoKeep/UI/API/APIWindow.xaml
@@ -1,12 +1,42 @@
-﻿<Window x:Class="Chronokeep.UI.API.APIWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.API.APIWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.API"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Link Event" Height="450" Width="300" MinWidth="300">
+        Title="Link Event" Height="450" Width="300" MinWidth="300"
+        d:DataContext="{d:DesignInstance local:APIWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
-        <Frame x:Name="APIFrame" NavigationUIVisibility="Hidden" IsTabStop="False" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid>
+            <Frame x:Name="APIFrame" NavigationUIVisibility="Hidden" IsTabStop="False" />
+        </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
