--- a/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
+++ b/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
@@ -1,35 +1,65 @@
-﻿<Window x:Class="Chronokeep.BibChipAssociationWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.BibChipAssociationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="BibChipAssociationWindow" Height="600" Width="500"
-        Closing="Window_Closing">
+        Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:BibChipAssociationWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80" Name="TopRow"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="80"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Name="EventHolder" Grid.Row="0">
-            <Label Content="Please choose an event:" FontSize="18" Margin="10,10,20,0" HorizontalContentAlignment="Center" />
-            <DockPanel>
-                <ComboBox x:Name="events" Margin="0,0,0,0" Width="350" Height="25" />
-            </DockPanel>
-        </StackPanel>
-        <ListBox x:Name="headerListBox" Margin="0,0,0,0" KeyboardNavigation.TabNavigation="Continue" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Grid.Row="1">
-            <ListBox.ItemContainerStyle>
-                <Style TargetType="ListBoxItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                </Style>
-            </ListBox.ItemContainerStyle>
-        </ListBox>
-        <CheckBox Name="Headers" Content="First Row Contains Headers" IsChecked="True" Grid.Row="2" Margin="20,10,20,0" FontSize="15" VerticalContentAlignment="Center"  VerticalAlignment="Top" HorizontalAlignment="Center"/>
-        <Button x:Name="Done" Height="25" Width="125" Content="Done" Margin="25,30,0,0" Click="Done_Click" Grid.Row="2" HorizontalAlignment="Left"/>
-        <Button x:Name="Cancel" Height="25" Width="125" Content="Cancel" Margin="0,30,25,0" Click="Cancel_Click"  Grid.Row="2" HorizontalAlignment="Right"/>
-        <Label x:Name="SheetsLabel" FontSize="16" HorizontalAlignment="Center" Margin="0,30,110,0" Content="Sheet" IsTabStop="False" Grid.Row="2" VerticalContentAlignment="Center" Visibility="Collapsed"/>
-        <ComboBox x:Name="SheetsBox" Height="25" Width="100" HorizontalAlignment="Center" Margin="70,30,20,0"  SelectionChanged="SheetsBox_SelectionChanged" TabIndex="1" Grid.Row="2" Visibility="Collapsed"/>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80" Name="TopRow"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="80"/>
+            </Grid.RowDefinitions>
+            <StackPanel Name="EventHolder" Grid.Row="0">
+                <TextBlock Text="Please choose an event:" FontSize="18" Margin="10,10,20,0" TextAlignment="Center" />
+                <DockPanel>
+                    <ComboBox x:Name="events" Margin="0,0,0,0" Width="350" Height="25" />
+                </DockPanel>
+            </StackPanel>
+            <ListBox x:Name="headerListBox" Margin="0,0,0,0" KeyboardNavigation.TabNavigation="Continue" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Grid.Row="1">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
+            <CheckBox Name="Headers" Content="First Row Contains Headers" IsChecked="True" Grid.Row="2" Margin="20,10,20,0" FontSize="15" VerticalContentAlignment="Center"  VerticalAlignment="Top" HorizontalAlignment="Center"/>
+            <Button x:Name="Done" Height="35" Width="125" Content="Done" Margin="25,30,0,0" Click="Done_Click" Grid.Row="2" HorizontalAlignment="Left"/>
+            <Button x:Name="Cancel" Height="35" Width="125" Content="Cancel" Margin="0,30,25,0" Click="Cancel_Click"  Grid.Row="2" HorizontalAlignment="Right"/>
+            <TextBlock x:Name="SheetsLabel" FontSize="16" HorizontalAlignment="Center" Margin="0,30,110,0" Text="Sheet" Grid.Row="2" VerticalAlignment="Center" Visibility="Collapsed"/>
+            <ComboBox x:Name="SheetsBox" Height="25" Width="100" HorizontalAlignment="Center" Margin="70,30,20,0"  SelectionChanged="SheetsBox_SelectionChanged" TabIndex="1" Grid.Row="2" Visibility="Collapsed"/>
+        </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
