--- a/ChronoKeep/UI/ChipAssignment/ChipTool.xaml
+++ b/ChronoKeep/UI/ChipAssignment/ChipTool.xaml
@@ -1,28 +1,58 @@
-﻿<Window x:Class="Chronokeep.UI.ChipAssignment.ChipTool"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.ChipAssignment.ChipTool"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.ChipAssignment"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Chip Tool"  Height="450" Width="390" MaxWidth="390" MinWidth="390" BorderThickness="1" Closing="Window_Closing">
+        Title="Chip Tool"  Height="450" Width="390" MaxWidth="390" MinWidth="390" BorderThickness="1" Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:ChipTool, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
-        <Button Content="Add Range" Width="90" Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10" Click="AddRange_Click" TabIndex="1" />
-        <Button Width="60" Height="25" Content="Save" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,10,80,10" Click="Save_Click" TabIndex="2" />
-        <Button Width="60" Height="25" Content="Cancel" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,10,10,10" Click="Cancel_Click" TabIndex="3" />
-        <Label Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,35,0,0" Content="Start Bib #" IsTabStop="False" />
-        <Label Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="85,35,0,0" Content="End Bib #" IsTabStop="False" />
-        <Label Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="160,35,0,0" Content="Start Tag #" IsTabStop="False" />
-        <Label Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="235,35,0,0" Content="End Tag #" IsTabStop="False" />
-        <Grid x:Name="itemsWindow" VerticalAlignment="Top" Margin="0,60,0,0" >
-            <ListBox x:Name="correlationBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" >
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-            </ListBox>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid>
+            <Button Content="Add Range" Width="90" Height="35" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,10" Click="AddRange_Click" TabIndex="1" />
+            <Button Width="60" Height="35" Content="Save" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,10,80,10" Click="Save_Click" TabIndex="2" />
+            <Button Width="60" Height="35" Content="Cancel" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,10,10,10" Click="Cancel_Click" TabIndex="3" />
+            <TextBlock Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,45,0,0" Text="Start Bib #" />
+            <TextBlock Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="85,45,0,0" Text="End Bib #" />
+            <TextBlock Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="160,45,0,0" Text="Start Tag #" />
+            <TextBlock Width="65" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="235,45,0,0" Text="End Tag #" />
+            <Grid x:Name="itemsWindow" VerticalAlignment="Top" Margin="0,70,0,0" >
+                <ListBox x:Name="correlationBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" >
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                            <Setter Property="VerticalContentAlignment" Value="Center"/>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>
+            </Grid>
         </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
