--- a/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
@@ -1,33 +1,63 @@
-﻿<Window x:Class="Chronokeep.NewEventWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.NewEventWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Event" Height="350" Width="350" ResizeMode="NoResize" Closing="Window_Closing" Topmost="True">
-    <StackPanel>
-        <DockPanel>
-            <Label Content="Name" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
-            <TextBox x:Name="nameBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Keyboard_Up" />
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Year Code" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
-            <TextBox x:Name="yearCodeBox" FontSize="16" Margin="5,10,10,10" KeyUp="Keyboard_Up"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Date" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
-            <DatePicker x:Name="datePicker" Margin="5,10,10,10" KeyUp="Keyboard_Up" FontSize="16"/>
-        </DockPanel>
-        <Label Name="CopyLabel" Content="Copy from old event:" Margin="20,0,20,10" FontSize="16"/>
-        <ComboBox Name="oldEvent" FontSize="16" Margin="20,0,20,10" />
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button Content="Submit" Margin="20,10,20,0" VerticalAlignment="Bottom" Click="Submit_Click" Grid.Column="0" FontSize="16" Height="35"/>
-            <Button Content="Cancel" Margin="20,10,20,0" VerticalAlignment="Bottom"  Click="Cancel_Click" Grid.Column="1" FontSize="16" Height="35"/>
-        </Grid>
-    </StackPanel>
-</Window>
+        Title="Event" Height="350" Width="350" ResizeMode="NoResize" Closing="Window_Closing" Topmost="True"
+        d:DataContext="{d:DesignInstance local:NewEventWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <StackPanel>
+            <DockPanel>
+                <TextBlock Text="Name" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
+                <TextBox x:Name="nameBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Keyboard_Up" />
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Year Code" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
+                <TextBox x:Name="yearCodeBox" FontSize="16" Margin="5,10,10,10" KeyUp="Keyboard_Up"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Date" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
+                <DatePicker x:Name="datePicker" Margin="5,10,10,10" KeyUp="Keyboard_Up" FontSize="16"/>
+            </DockPanel>
+            <TextBlock Name="CopyLabel" Text="Copy from old event:" Margin="20,0,20,10" FontSize="16"/>
+            <ComboBox Name="oldEvent" FontSize="16" Margin="20,0,20,10" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Button Content="Submit" Margin="20,10,20,0" VerticalAlignment="Bottom" Click="Submit_Click" Grid.Column="0" FontSize="16" Height="35"/>
+                <Button Content="Cancel" Margin="20,10,20,0" VerticalAlignment="Bottom"  Click="Cancel_Click" Grid.Column="1" FontSize="16" Height="35"/>
+            </Grid>
+        </StackPanel>
+    </Grid>
+</ui:UiWindow>
