--- a/ChronoKeep/UI/Export/ExportDistanceResults.xaml
+++ b/ChronoKeep/UI/Export/ExportDistanceResults.xaml
@@ -1,26 +1,56 @@
-﻿<Window x:Class="Chronokeep.UI.Export.ExportDistanceResults"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.Export.ExportDistanceResults"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Export"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="ExportDistanceResults" Height="250" Width="300" MinWidth="300" MaxWidth="300" Closing="Window_Closing">
+        Title="ExportDistanceResults" Height="250" Width="300" MinWidth="300" MaxWidth="300" Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:ExportDistanceResults, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Content="Distance to Export" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.Row="0"/>
-        <ComboBox Name="distanceBox" VerticalAlignment="Center" Grid.Row="1" Margin="20,20,20,20" />
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button x:Name="Done" Content="Submit" FontSize="16" Height="35" Margin="10,5,5,10" Click="Done_Click" Grid.Column="0" />
-            <Button x:Name="Cancel" Content="Cancel" FontSize="16" Height="35" Margin="5,5,10,10" Click="Cancel_Click" Grid.Column="1"/>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="Distance to Export" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" Grid.Row="0"/>
+            <ComboBox Name="distanceBox" VerticalAlignment="Center" Grid.Row="1" Margin="20,20,20,20" />
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Button x:Name="Done" Content="Submit" FontSize="16" Height="35" Margin="10,5,5,10" Click="Done_Click" Grid.Column="0" />
+                <Button x:Name="Cancel" Content="Cancel" FontSize="16" Height="35" Margin="5,5,10,10" Click="Cancel_Click" Grid.Column="1"/>
+            </Grid>
         </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
