--- a/ChronoKeep/UI/Import/ImportFilePage1.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePage1.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="Chronokeep.ImportFilePage1"
+﻿<ui:UiPage x:Class="Chronokeep.ImportFilePage1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="300" d:DesignWidth="400"
       Title="ImportFilePage1">
@@ -16,4 +17,4 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
     </Grid>
-</Page>
+</ui:UiPage>
