--- a/ChronoKeep/UI/Import/ImportFilePage2Alt.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePage2Alt.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="Chronokeep.UI.Import.ImportFilePage2Alt"
+﻿<ui:UiPage x:Class="Chronokeep.UI.Import.ImportFilePage2Alt"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.Import"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ImportFilePage2Alt">
@@ -22,4 +23,4 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
     </Grid>
-</Page>
+</ui:UiPage>
