--- a/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="Chronokeep.UI.Import.ImportFilePageConflicts"
+﻿<ui:UiPage x:Class="Chronokeep.UI.Import.ImportFilePageConflicts"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.Import"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="400"
       Title="ImportPageMultiples">
@@ -13,7 +14,7 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <StackPanel>
-            <Label Content="Select entries to keep." FontSize="16" Margin="10,0,10,0" Grid.Row="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <TextBlock Text="Select entries to keep." FontSize="16" Margin="10,0,10,0" Grid.Row="0" VerticalAlignment="Center" TextAlignment="Center"/>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="20"/>
@@ -24,12 +25,12 @@
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
-                <Label Content="Old" Grid.Column="1" />
-                <Label Content="Bib" Grid.Column="2" />
-                <Label Content="Div" Grid.Column="3" />
-                <Label Content="Name" Grid.Column="4" />
-                <Label Content="Age" Grid.Column="6" />
-                <Label Content="Sex" Grid.Column="5" />
+                <TextBlock Text="Old" Grid.Column="1" />
+                <TextBlock Text="Bib" Grid.Column="2" />
+                <TextBlock Text="Div" Grid.Column="3" />
+                <TextBlock Text="Name" Grid.Column="4" />
+                <TextBlock Text="Age" Grid.Column="6" />
+                <TextBlock Text="Sex" Grid.Column="5" />
             </Grid>
         </StackPanel>
         <ListBox x:Name="multiplesListBox" KeyboardNavigation.TabNavigation="Continue" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsTabStop="False" Grid.Row="1">
@@ -40,4 +41,4 @@
             </ListBox.ItemContainerStyle>
         </ListBox>
     </Grid>
-</Page>
+</ui:UiPage>
