--- a/ChronoKeep/UI/Import/ImportFileWindow.xaml
+++ b/ChronoKeep/UI/Import/ImportFileWindow.xaml
@@ -1,30 +1,60 @@
-﻿<Window x:Class="Chronokeep.ImportFileWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.ImportFileWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="ImportFileWindow" Height="600" Width="500" MinWidth="450"
-        Closing="Window_Closing">
-    <Grid Name="MainGrid">
+        Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:ImportFileWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80" Name="Header"/>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Name="HeaderGrid">
-            <TextBox x:Name="eventLabel" FontSize="17" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,0" Width="340" TabIndex="0"/>
-            <DatePicker x:Name="date" Height="25" Width="120" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,10,10,0" TabIndex="1" />
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid Name="MainGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80" Name="Header"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Name="HeaderGrid">
+                <TextBox x:Name="eventLabel" FontSize="17" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,10,0" Width="340" TabIndex="0"/>
+                <DatePicker x:Name="date" Height="25" Width="120" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,10,10,0" TabIndex="1" />
 
-            <Label Content="Shirt Price" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,47,420,0" IsTabStop="False" />
-            <TextBox x:Name="shirtPriceBox" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Height="25" FontSize="16" Margin="0,47,345,0" TabIndex="2" />
-            <CheckBox x:Name="shirtOptionalBox" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Shirt Optional" IsChecked="True" Margin="10,53,245,0" TabIndex="3"/>
+                <TextBlock Text="Shirt Price" VerticalAlignment="Top" TextAlignment="Right" Margin="0,47,420,0" />
+                <TextBox x:Name="shirtPriceBox" VerticalAlignment="Top" HorizontalAlignment="Right" Width="75" Height="25" FontSize="16" Margin="0,47,345,0" TabIndex="2" />
+                <CheckBox x:Name="shirtOptionalBox" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Shirt Optional" IsChecked="True" Margin="10,53,245,0" TabIndex="3"/>
 
-            <ComboBox x:Name="SheetsBox" Height="25" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="70,47,131,0" SelectionChanged="SheetsBox_SelectionChanged" TabIndex="1"/>
+                <ComboBox x:Name="SheetsBox" Height="25" Width="100" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="70,47,131,0" SelectionChanged="SheetsBox_SelectionChanged" TabIndex="1"/>
 
-            <Button x:Name="Done" Height="25" Width="55" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Next" Margin="0,47,68,0" Click="Done_Click" TabIndex="500"/>
-            <Button x:Name="Cancel" Height="25" Width="55" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Cancel" Margin="0,47,6,0" Click="Cancel_Click" TabIndex="501"/>
+                <Button x:Name="Done" Height="25" Width="55" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Next" Margin="0,47,68,0" Click="Done_Click" TabIndex="500"/>
+                <Button x:Name="Cancel" Height="25" Width="55" VerticalAlignment="Top" HorizontalAlignment="Right" Content="Cancel" Margin="0,47,6,0" Click="Cancel_Click" TabIndex="501"/>
+            </Grid>
+            <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" Grid.Row="1"/>
         </Grid>
-        <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" Grid.Row="1"/>
     </Grid>
-</Window>
+</ui:UiWindow>
