--- a/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
@@ -1,21 +1,51 @@
-﻿<Window x:Class="Chronokeep.UI.Participants.ChangeMultiParticipantWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.Participants.ChangeMultiParticipantWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Participants"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Modify Participants" Height="250" Width="250" ResizeMode="NoResize" Closing="Window_Closing">
-    <StackPanel VerticalAlignment="Center">
-        <Label Content="Switch Participants to" FontSize="14" VerticalContentAlignment="Center" Width="210"/>
-        <ComboBox Name="DistanceBox" Width="210" FontSize="16" Margin="10,5,10,5"/>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button Name="Change" Content="Change" Width="100" Height="25" HorizontalAlignment="Right" Grid.Column="0" Margin="5,10,5,5" Click="Change_Click"/>
-            <Button Name="Cancel" Content="Cancel" Width="100" Height="25" HorizontalAlignment="Left" Grid.Column="1" Margin="5,10,5,5" Click="Cancel_Click"/>
-        </Grid>
-    </StackPanel>
-</Window>
+        Title="Modify Participants" Height="250" Width="250" ResizeMode="NoResize" Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:ChangeMultiParticipantWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <StackPanel VerticalAlignment="Center">
+            <TextBlock Text="Switch Participants to" FontSize="14" VerticalAlignment="Center" Width="210"/>
+            <ComboBox Name="DistanceBox" Width="210" FontSize="16" Margin="10,5,10,5"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Button Name="Change" Content="Change" Width="100" Height="25" HorizontalAlignment="Right" Grid.Column="0" Margin="5,10,5,5" Click="Change_Click"/>
+                <Button Name="Cancel" Content="Cancel" Width="100" Height="25" HorizontalAlignment="Left" Grid.Column="1" Margin="5,10,5,5" Click="Cancel_Click"/>
+            </Grid>
+        </StackPanel>
+    </Grid>
+</ui:UiWindow>
