--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -1,98 +1,128 @@
-﻿<Window x:Class="Chronokeep.UI.Participants.ModifyParticipantWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.Participants.ModifyParticipantWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Participants"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Participant" Height="575" Width="520" Closing="Window_Closing" ResizeMode="NoResize">
-    <StackPanel VerticalAlignment="Center">
-        <DockPanel>
-            <Label Content="Bib" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="BibBox" FontSize="16" Margin="0,5,5,5" Width="100" VerticalContentAlignment="Center" KeyDown="Box_KeyDown"/>
-            <ComboBox Name="DistanceBox" FontSize="16" Margin="0,5,5,5"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="First" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="FirstBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Last" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="LastBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Birthday" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <DatePicker Name="BirthdayBox" FontSize="16" Margin="0,5,5,5" Width="130" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
-            <Label Content="Age" FontSize="16" Margin="0,0,5,0" Width="45" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
-            <TextBox Name="AgeBox" FontSize="16" Margin="0,5,5,5" Width="40" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
-            <Label Content="Gender" FontSize="16" Margin="0,0,5,0" Width="70" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <ComboBox Name="GenderBox" FontSize="16" Margin="0,5,5,5" SelectionChanged="GenderBox_SelectionChanged">
-                <ComboBoxItem Content="Man"/>
-                <ComboBoxItem Content="Woman"/>
-                <ComboBoxItem Content="Non-Binary"/>
-                <ComboBoxItem Content="Other"/>
-                <ComboBoxItem Content="Not Specified"/>
-            </ComboBox>
-        </DockPanel>
-        <DockPanel Name="otherGenderPanel" HorizontalAlignment="Right">
-            <Label Content="Gender" FontSize="16" Margin="0,5,5,5" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="otherGenderBox" FontSize="16" Margin="0,5,5,5" Width="100" KeyDown="Box_KeyDown" Height="25"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Street" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="StreetBox" FontSize="16" Margin="0,5,5,5" Width="180" KeyDown="Box_KeyDown"/>
-            <Label Content="Appartment" FontSize="16" Margin="0,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="Street2Box" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="City" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="CityBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="State" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="StateBox" FontSize="16" Margin="0,5,5,5" Width="180" KeyDown="Box_KeyDown"/>
-            <Label Content="Zip" FontSize="16" Margin="0,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="ZipBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Country" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="CountryBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Email" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="EmailBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Phone" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="MobileBox" FontSize="16" Margin="0,5,5,5" Width="140" KeyDown="Box_KeyDown"/>
-            <Label Content="Parent" FontSize="16" Margin="0,0,0,0" Width="80" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="ParentBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="EC Name" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="ECNameBox" FontSize="16" Margin="0,5,5,5" Width="140" KeyDown="Box_KeyDown"/>
-            <Label Content="EC Phone" FontSize="16" Margin="0,0,0,0" Width="80" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="ECPhoneBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Comments" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="CommentsBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Other" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"/>
-            <TextBox Name="OtherBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Private" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" />
-            <CheckBox Name="AnonymousBox" Margin="0,5,5,5" VerticalContentAlignment="Center"/>
-        </DockPanel>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button Name="Add" Content="Add" Height="35" FontSize="16" Margin="10,5,10,10" Grid.Column="0"/>
-            <Button Name="Done" Content="Done" Height="35" FontSize="16" Margin="10,5,10,10" Click="Done_Click" Grid.Column="1"/>
-        </Grid>
-    </StackPanel>
-</Window>
+        Title="Participant" Height="575" Width="520" Closing="Window_Closing" ResizeMode="NoResize"
+        d:DataContext="{d:DesignInstance local:ModifyParticipantWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <StackPanel VerticalAlignment="Center">
+            <DockPanel>
+                <TextBlock Text="Bib" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="BibBox" FontSize="16" Margin="0,5,5,5" Width="100" VerticalContentAlignment="Center" KeyDown="Box_KeyDown"/>
+                <ComboBox Name="DistanceBox" FontSize="16" Margin="0,5,5,5"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="First" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="FirstBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Last" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="LastBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Birthday" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <DatePicker Name="BirthdayBox" FontSize="16" Margin="0,5,5,5" Width="130" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
+                <TextBlock Text="Age" FontSize="16" Margin="0,0,5,0" Width="45" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="AgeBox" FontSize="16" Margin="0,5,5,5" Width="40" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
+                <TextBlock Text="Gender" FontSize="16" Margin="0,0,5,0" Width="70" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <ComboBox Name="GenderBox" FontSize="16" Margin="0,5,5,5" SelectionChanged="GenderBox_SelectionChanged">
+                    <ComboBoxItem Content="Man"/>
+                    <ComboBoxItem Content="Woman"/>
+                    <ComboBoxItem Content="Non-Binary"/>
+                    <ComboBoxItem Content="Other"/>
+                    <ComboBoxItem Content="Not Specified"/>
+                </ComboBox>
+            </DockPanel>
+            <DockPanel Name="otherGenderPanel" HorizontalAlignment="Right">
+                <TextBlock Text="Gender" FontSize="16" Margin="0,5,5,5" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="otherGenderBox" FontSize="16" Margin="0,5,5,5" Width="100" KeyDown="Box_KeyDown" Height="25"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Street" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="StreetBox" FontSize="16" Margin="0,5,5,5" Width="180" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Appartment" FontSize="16" Margin="0,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="Street2Box" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="City" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="CityBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="State" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="StateBox" FontSize="16" Margin="0,5,5,5" Width="180" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Zip" FontSize="16" Margin="0,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="ZipBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Country" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="CountryBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Email" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="EmailBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Phone" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="MobileBox" FontSize="16" Margin="0,5,5,5" Width="140" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Parent" FontSize="16" Margin="0,0,0,0" Width="80" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="ParentBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="EC Name" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="ECNameBox" FontSize="16" Margin="0,5,5,5" Width="140" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="EC Phone" FontSize="16" Margin="0,0,0,0" Width="80" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="ECPhoneBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Comments" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="CommentsBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Other" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                <TextBox Name="OtherBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Private" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center" />
+                <CheckBox Name="AnonymousBox" Margin="0,5,5,5" VerticalContentAlignment="Center"/>
+            </DockPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Button Name="Add" Content="Add" Height="35" FontSize="16" Margin="10,5,10,10" Grid.Column="0"/>
+                <Button Name="Done" Content="Done" Height="35" FontSize="16" Margin="10,5,10,10" Click="Done_Click" Grid.Column="1"/>
+            </Grid>
+        </StackPanel>
+    </Grid>
+</ui:UiWindow>
