--- a/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
+++ b/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="Chronokeep.UI.Timing.DistanceStatsPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.DistanceStatsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DistanceStatsPage">
@@ -13,69 +14,109 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="45"/>
         </Grid.RowDefinitions>
-        <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="0" VerticalScrollBarVisibility="Auto" x:Name="mainScroll">
             <StackPanel>
-                <Label Name="DistanceName" Content="Distance Name" HorizontalAlignment="Center" FontSize="18" Margin="0,0,0,-5"/>
-                <Expander x:Name="activePanel" Header="Active" Margin="0,0,0,0" IsExpanded="True" FontSize="12" HorizontalAlignment="Stretch">
-                    <ListView x:Name="activeListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Bib" Width="60" DisplayMemberBinding="{Binding Bib}" />
-                                <GridViewColumn Header="First" Width="100" DisplayMemberBinding="{Binding FirstName}" />
-                                <GridViewColumn Header="Last" Width="100" DisplayMemberBinding="{Binding LastName}" />
-                                <GridViewColumn Header="Gender" Width="60" DisplayMemberBinding="{Binding Gender}" />
-                                <GridViewColumn Header="Mobile" Width="140" DisplayMemberBinding="{Binding Mobile}" />
-                                <GridViewColumn Header="Email" Width="200" DisplayMemberBinding="{Binding Email}" />
-                            </GridView>
-                        </ListView.View>
+                <TextBlock Name="DistanceName" Text="Distance Name" HorizontalAlignment="Center" FontSize="18" Margin="0,5,0,5"/>
+                <Expander x:Name="activePanel" Header="Active" Margin="0,0,0,5" IsExpanded="True" FontSize="12" HorizontalAlignment="Stretch">
+                    <ListView x:Name="activeListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12" PreviewMouseWheel="activeListView_PreviewMouseWheel">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="200" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
+                                    <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
+                                    <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
                     </ListView>
                 </Expander>
-                <Expander x:Name="dnfPanel" Header="Did Not Finish" Margin="0,0,0,0" IsExpanded="True" FontSize="12" HorizontalAlignment="Stretch">
-                    <ListView x:Name="dnfListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Bib" Width="60" DisplayMemberBinding="{Binding Bib}" />
-                                <GridViewColumn Header="First" Width="100" DisplayMemberBinding="{Binding FirstName}" />
-                                <GridViewColumn Header="Last" Width="100" DisplayMemberBinding="{Binding LastName}" />
-                                <GridViewColumn Header="Gender" Width="60" DisplayMemberBinding="{Binding Gender}" />
-                                <GridViewColumn Header="Mobile" Width="140" DisplayMemberBinding="{Binding Mobile}" />
-                                <GridViewColumn Header="Email" Width="200" DisplayMemberBinding="{Binding Email}" />
-                            </GridView>
-                        </ListView.View>
+                <Expander x:Name="dnfPanel" Header="Did Not Finish" Margin="0,0,0,5" IsExpanded="True" FontSize="12" HorizontalAlignment="Stretch">
+                    <ListView x:Name="dnfListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12" PreviewMouseWheel="activeListView_PreviewMouseWheel">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="200" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
+                                    <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
+                                    <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
                     </ListView>
                 </Expander>
-                <Expander x:Name="dnsPanel" Header="Did Not Start" Margin="0,0,0,0" IsExpanded="False" FontSize="12" HorizontalAlignment="Stretch">
-                    <ListView x:Name="dnsListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Bib" Width="60" DisplayMemberBinding="{Binding Bib}" />
-                                <GridViewColumn Header="First" Width="100" DisplayMemberBinding="{Binding FirstName}" />
-                                <GridViewColumn Header="Last" Width="100" DisplayMemberBinding="{Binding LastName}" />
-                                <GridViewColumn Header="Gender" Width="60" DisplayMemberBinding="{Binding Gender}" />
-                                <GridViewColumn Header="Mobile" Width="140" DisplayMemberBinding="{Binding Mobile}" />
-                                <GridViewColumn Header="Email" Width="200" DisplayMemberBinding="{Binding Email}" />
-                            </GridView>
-                        </ListView.View>
+                <Expander x:Name="dnsPanel" Header="Did Not Start" Margin="0,0,0,5" IsExpanded="False" FontSize="12" HorizontalAlignment="Stretch">
+                    <ListView x:Name="dnsListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12" PreviewMouseWheel="activeListView_PreviewMouseWheel">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="200" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
+                                    <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
+                                    <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
                     </ListView>
                 </Expander>
                 <Expander x:Name="finishedPanel" Header="Finished" Margin="0,0,0,0" IsExpanded="False" FontSize="12" HorizontalAlignment="Stretch">
-                    <ListView x:Name="finishedListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Bib" Width="60" DisplayMemberBinding="{Binding Bib}" />
-                                <GridViewColumn Header="First" Width="100" DisplayMemberBinding="{Binding FirstName}" />
-                                <GridViewColumn Header="Last" Width="100" DisplayMemberBinding="{Binding LastName}" />
-                                <GridViewColumn Header="Gender" Width="60" DisplayMemberBinding="{Binding Gender}" />
-                                <GridViewColumn Header="Mobile" Width="140" DisplayMemberBinding="{Binding Mobile}" />
-                                <GridViewColumn Header="Email" Width="200" DisplayMemberBinding="{Binding Email}" />
-                            </GridView>
-                        </ListView.View>
+                    <ListView x:Name="finishedListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" FontSize="12" PreviewMouseWheel="activeListView_PreviewMouseWheel">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="200" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
+                                    <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
+                                    <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
                     </ListView>
                 </Expander>
             </StackPanel>
         </ScrollViewer>
         <DockPanel LastChildFill="False" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="DoneButton_Click"/>
+            <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="120" Margin="5,10,5,5" Click="DoneButton_Click"/>
         </DockPanel>
     </Grid>
-</Page>
+</ui:UiPage>
