--- a/ChronoKeep/UI/Timing/EditRawReadsWindow.xaml
+++ b/ChronoKeep/UI/Timing/EditRawReadsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Chronokeep.UI.Timing.EditRawReadsWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.EditRawReadsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,37 +6,67 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Edit" Height="230" Width="200" ResizeMode="NoResize">
+        Title="Edit" Height="230" Width="200" ResizeMode="NoResize"
+        d:DataContext="{d:DesignInstance local:EditRawReadsWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="60"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="70"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Content="Days" FontSize="14" Grid.Column="0" Grid.Row="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Label Content="Time" FontSize="14" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <TextBox Name="DaysBox" FontSize="14" Grid.Column="0" Grid.Row="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="5,5,5,5" KeyDown="Enter_KeyDown" PreviewTextInput="DaysBox_PreviewTextInput"/>
-        <xctk:MaskedTextBox Name="TimeBox" FontSize="14" Grid.Column="1" Grid.Row="2" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="5,5,5,5" KeyDown="Enter_KeyDown"/>
-        <Grid Grid.Row="3" Grid.ColumnSpan="2">
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="60"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="35"/>
+                <RowDefinition Height="70"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <RadioButton Content="Add" VerticalContentAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="0" Name="AddRadio" GroupName="RadioGroup" IsChecked="True" KeyDown="Enter_KeyDown"/>
-            <RadioButton Content="Subtract" VerticalContentAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="0" Name="SubRadio" GroupName="RadioGroup" KeyDown="Enter_KeyDown"/>
-            <Button Content="Submit" Name="Submit" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" Click="Submit_Click"/>
-            <Button Content="Cancel" Name="Cancel" Grid.Column="1" Grid.Row="1" Margin="5,5,5,5" Click="Cancel_Click"/>
+            <TextBlock Text="Days" FontSize="14" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Center"/>
+            <TextBlock Text="Time" FontSize="14" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" TextAlignment="Center"/>
+            <TextBox Name="DaysBox" FontSize="14" Grid.Column="0" Grid.Row="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="5,5,5,5" KeyDown="Enter_KeyDown" PreviewTextInput="DaysBox_PreviewTextInput"/>
+            <xctk:MaskedTextBox Name="TimeBox" FontSize="14" Grid.Column="1" Grid.Row="2" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="5,5,5,5" KeyDown="Enter_KeyDown"/>
+            <Grid Grid.Row="3" Grid.ColumnSpan="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <RadioButton Content="Add" VerticalContentAlignment="Center" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="0" Name="AddRadio" GroupName="RadioGroup" IsChecked="True" KeyDown="Enter_KeyDown"/>
+                <RadioButton Content="Subtract" VerticalContentAlignment="Center" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="0" Name="SubRadio" GroupName="RadioGroup" KeyDown="Enter_KeyDown"/>
+                <Button Content="Submit" Name="Submit" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" Click="Submit_Click" HorizontalAlignment="Center"/>
+                <Button Content="Cancel" Name="Cancel" Grid.Column="1" Grid.Row="1" Margin="5,5,5,5" Click="Cancel_Click" HorizontalAlignment="Center"/>
+            </Grid>
         </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
