--- a/ChronoKeep/UI/Timing/Import/ImportLogPage1.xaml
+++ b/ChronoKeep/UI/Timing/Import/ImportLogPage1.xaml
@@ -1,19 +1,20 @@
-﻿<Page x:Class="Chronokeep.UI.Timing.Import.ImportLogPage1"
+﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.Import.ImportLogPage1"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.Timing.Import"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       Title="ImportLogPage1">
 
     <StackPanel VerticalAlignment="Center">
         <DockPanel LastChildFill="False" HorizontalAlignment="Center" Margin="10,10,10,5">
-            <Label Content="Log Type" Width="70" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Margin="0,0,10,0" />
+            <TextBlock Text="Log Type" Width="70" VerticalAlignment="Center" TextAlignment="Right" Margin="0,0,10,0" />
             <ComboBox Name="TypeHolder" Width="150" FontSize="16" VerticalAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="TypeHolder_SelectionChanged" />
         </DockPanel>
         <DockPanel LastChildFill="False" HorizontalAlignment="Center" Margin="10,5,10,10">
-            <Label Content="Location" Width="70" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" Margin="0,0,10,0"/>
+            <TextBlock Text="Location" Width="70" VerticalAlignment="Center" TextAlignment="Right" Margin="0,0,10,0"/>
             <ComboBox Name="LocationHolder" Width="150" FontSize="16" VerticalAlignment="Center" VerticalContentAlignment="Center" />
         </DockPanel>
         <Grid>
@@ -21,8 +22,8 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
-            <Button Name="NextButton" Content="Next" Width="100" Height="30" FontSize="14" Margin="10,10,5,10" VerticalContentAlignment="Center" HorizontalAlignment="Right" Grid.Column="0" Click="NextButton_Click" />
-            <Button Name="CancelButton" Content="Cancel" Width="100" Height="30" FontSize="14" Margin="5,10,10,10" VerticalContentAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Click="CancelButton_Click" />
+            <Button Name="NextButton" Content="Next" Width="100" Height="35" FontSize="14" Margin="10,10,5,10" VerticalContentAlignment="Center" HorizontalAlignment="Right" Grid.Column="0" Click="NextButton_Click" />
+            <Button Name="CancelButton" Content="Cancel" Width="100" Height="35" FontSize="14" Margin="5,10,10,10" VerticalContentAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Click="CancelButton_Click" />
         </Grid>
     </StackPanel>
-</Page>
+</ui:UiPage>
