--- a/ChronoKeep/UI/Timing/Import/ImportLogPage2.xaml
+++ b/ChronoKeep/UI/Timing/Import/ImportLogPage2.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="Chronokeep.UI.Timing.Import.ImportLogPage2"
+﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.Import.ImportLogPage2"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.Timing.Import"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ImportLogPage2">
@@ -11,7 +12,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="55"/>
         </Grid.RowDefinitions>
         <ListBox x:Name="itemListBox" KeyboardNavigation.TabNavigation="Continue" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsTabStop="False" Grid.Row="0">
             <ListBox.ItemContainerStyle>
@@ -25,8 +26,8 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Button Name="ImportButton" Content="Import" Width="100" Height="30" FontSize="14" Margin="10,10,5,10" VerticalContentAlignment="Center" HorizontalAlignment="Right" Grid.Column="0" Click="ImportButton_Click" />
-            <Button Name="CancelButton" Content="Cancel" Width="100" Height="30" FontSize="14" Margin="5,10,10,10" VerticalContentAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Click="CancelButton_Click" />
+            <Button Name="ImportButton" Content="Import" Width="100" Height="35" FontSize="14" Margin="10,10,5,10" VerticalContentAlignment="Center" HorizontalAlignment="Right" Grid.Column="0" Click="ImportButton_Click" />
+            <Button Name="CancelButton" Content="Cancel" Width="100" Height="35" FontSize="14" Margin="5,10,10,10" VerticalContentAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Click="CancelButton_Click" />
         </Grid>
     </Grid>
-</Page>
+</ui:UiPage>
