--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Chronokeep.UI.Timing.ManualEntryWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.ManualEntryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:s="clr-namespace:System;assembly=mscorlib"
@@ -6,35 +6,65 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Manual Entry" Height="345" Width="300" Closing="Window_Closing">
-    <StackPanel VerticalAlignment="Center">
-        <DockPanel>
-            <Label Content="Bib" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
-            <TextBox Name="BibBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Enter_KeyDown" PreviewTextInput="NumberValidation" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        </DockPanel>
-        <DockPanel>
-            <Label Content="Time" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
-            <xctk:MaskedTextBox Name="TimeBox" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" FontSize="16" Margin="5,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" KeyUp="Enter_KeyDown"/>
-        </DockPanel>
-        <DockPanel Name="DatePanel" Visibility="Collapsed">
-            <Label Content="Date" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
-            <DatePicker Name="DateBox" FontSize="16" Margin="5,10,10,10"/>
-        </DockPanel>
-        <DockPanel x:Name="LocationPanel">
-            <Label Content="Location" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right"/>
-            <ComboBox Name="LocationBox" FontSize="16" Margin="5,10,10,10"/>
-        </DockPanel>
-        <RadioButton Name="NetTimeButton" Content="Net Time" GroupName="TimeGroup" Margin="95,5,0,0" IsChecked="True" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
-        <RadioButton Name="ClockTimeButton" Content="Clock Time" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
-        <RadioButton Name="TimeofDayButton" Content="Time of Day" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
-        <Grid Margin="10,10,10,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button Name="Add" Content="Add" Click="Add_Click" Grid.Column="0" Margin="10,0,10,0" FontSize="14" Height="30"/>
-            <Button Name="Done" Content="Done" Click="Done_Click" Grid.Column="1" Margin="10,0,10,0" FontSize="14" Height="30"/>
-        </Grid>
-    </StackPanel>
-</Window>
+        Title="Manual Entry" Height="345" Width="300" Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:ManualEntryWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <StackPanel VerticalAlignment="Center">
+            <DockPanel>
+                <TextBlock Text="Bib" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
+                <TextBox Name="BibBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Enter_KeyDown" PreviewTextInput="NumberValidation" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Time" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
+                <xctk:MaskedTextBox Name="TimeBox" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" FontSize="16" Margin="5,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" KeyUp="Enter_KeyDown"/>
+            </DockPanel>
+            <DockPanel Name="DatePanel" Visibility="Collapsed">
+                <TextBlock Text="Date" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
+                <DatePicker Name="DateBox" FontSize="16" Margin="5,10,10,10"/>
+            </DockPanel>
+            <DockPanel x:Name="LocationPanel">
+                <TextBlock Text="Location" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
+                <ComboBox Name="LocationBox" FontSize="16" Margin="5,10,10,10"/>
+            </DockPanel>
+            <RadioButton Name="NetTimeButton" Content="Net Time" GroupName="TimeGroup" Margin="95,5,0,0" IsChecked="True" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
+            <RadioButton Name="ClockTimeButton" Content="Clock Time" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
+            <RadioButton Name="TimeofDayButton" Content="Time of Day" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center" Checked="TypeButtonChecked"/>
+            <Grid Margin="10,10,10,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <Button Name="Add" Content="Add" Click="Add_Click" Grid.Column="0" Margin="10,0,10,0" FontSize="14" Height="30"/>
+                <Button Name="Done" Content="Done" Click="Done_Click" Grid.Column="1" Margin="10,0,10,0" FontSize="14" Height="30"/>
+            </Grid>
+        </StackPanel>
+    </Grid>
+</ui:UiWindow>
