--- a/ChronoKeep/UI/Timing/PrintPage.xaml
+++ b/ChronoKeep/UI/Timing/PrintPage.xaml
@@ -1,13 +1,13 @@
-﻿<Page x:Class="Chronokeep.UI.Timing.PrintPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.PrintPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PrintPage">
-
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
         <StackPanel HorizontalAlignment="Center">
             <Grid Margin="5,5,5,5">
@@ -15,8 +15,8 @@
                     <ColumnDefinition Width="200" />
                     <ColumnDefinition Width="130" />
                 </Grid.ColumnDefinitions>
-                <Label Content="Distances" FontSize="16" Grid.Column="0" HorizontalContentAlignment="Center"/>
-                <Label Content="Type" FontSize="16" Grid.Column="1" HorizontalContentAlignment="Center"/>
+                <TextBlock Text="Distances" FontSize="16" Grid.Column="0" TextAlignment="Center"/>
+                <TextBlock Text="Type" FontSize="16" Grid.Column="1" TextAlignment="Center"/>
             </Grid>
             <Grid Margin="5,5,5,5">
                 <Grid.ColumnDefinitions>
@@ -39,4 +39,4 @@
             </DockPanel>
         </StackPanel>
     </ScrollViewer>
-</Page>
+</ui:UiPage>
