--- a/ChronoKeep/UI/Timing/SetTimeWindow.xaml
+++ b/ChronoKeep/UI/Timing/SetTimeWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Chronokeep.UI.Timing.SetTimeWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.UI.Timing.SetTimeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,32 +6,62 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Timing"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Set Time" Height="300" Width="300" ResizeMode="NoResize">
-    <StackPanel VerticalAlignment="Center">
-        <Label Content="Set Time To" FontSize="18" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <RadioButton Name="NowTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" Content="Now" FontSize="14" IsChecked="True"/>
-        <RadioButton Name="SpecificTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" HorizontalAlignment="Stretch">
+        Title="Set Time" Height="300" Width="300" ResizeMode="NoResize"
+        d:DataContext="{d:DesignInstance local:SetTimeWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <StackPanel VerticalAlignment="Center">
+            <TextBlock Text="Set Time To" FontSize="18" VerticalAlignment="Center" TextAlignment="Center"/>
+            <RadioButton Name="NowTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" Content="Now" FontSize="14" IsChecked="True"/>
+            <RadioButton Name="SpecificTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" HorizontalAlignment="Stretch">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <DatePicker Name="SpecificDateBox" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="0"/>
+                    <xctk:MaskedTextBox Name="SpecificTimeBox" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" Grid.Column="1" Margin="10,0,0,0"/>
+                </Grid>
+            </RadioButton>
+            <CheckBox Name="SetAllCheckBox" Content="Set all connected readers" FontSize="14" VerticalContentAlignment="Center" Margin="30,5,30,5"/>
+            <TextBlock Name="TimeLabel" VerticalAlignment="Center" TextAlignment="Center" Text="" FontSize="14" Margin="30,5,30,5"/>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <DatePicker Name="SpecificDateBox" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="0"/>
-                <xctk:MaskedTextBox Name="SpecificTimeBox" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" Grid.Column="1" Margin="10,0,0,0"/>
+                <Button Name="Check" Content="Get Time" FontSize="14" Grid.Column="0" Click="Check_Click" Margin="10,5,3,5" HorizontalAlignment="Stretch"/>
+                <Button Name="Set" Content="Set Time" FontSize="14" Grid.Column="1" Click="Set_Click" Margin="7,5,7,5" HorizontalAlignment="Stretch"/>
+                <Button Name="Done" Content="Done" FontSize="14" Grid.Column="2" Click="Done_Click" Margin="3,5,10,5" HorizontalAlignment="Stretch"/>
             </Grid>
-        </RadioButton>
-        <CheckBox Name="SetAllCheckBox" Content="Set all connected readers" FontSize="14" VerticalContentAlignment="Center" Margin="30,5,30,5"/>
-        <Label Name="TimeLabel" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="" FontSize="14" Margin="30,5,30,5"/>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Button Name="Check" Content="Get Time" FontSize="14" Grid.Column="0" Click="Check_Click" Margin="10,5,3,5"/>
-            <Button Name="Set" Content="Set Time" FontSize="14" Grid.Column="1" Click="Set_Click" Margin="7,5,7,5"/>
-            <Button Name="Done" Content="Done" FontSize="14" Grid.Column="2" Click="Done_Click" Margin="3,5,10,5"/>
-        </Grid>
-    </StackPanel>
-</Window>
+        </StackPanel>
+    </Grid>
+</ui:UiWindow>
