--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -1,34 +1,111 @@
-﻿<Page x:Class="Chronokeep.UI.Timing.TimingResultsPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.Timing.TimingResultsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="TimingResultsPage">
-
     <Grid>
-        <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Single" Loaded="UpdateListView_Loaded" HorizontalContentAlignment="Center" FontSize="12" MouseDoubleClick="UpdateListView_MouseDoubleClick">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Loc" Width="70" DisplayMemberBinding="{Binding LocationName}" />
-                    <GridViewColumn Header="Occ" Width="25" DisplayMemberBinding="{Binding Occurrence}"/>
-                    <GridViewColumn Header="System Time" Width="130" DisplayMemberBinding="{Binding SysTime}" />
-                    <GridViewColumn Header="Time" Width="90" DisplayMemberBinding="{Binding Time}" />
-                    <GridViewColumn Header="ChipTime" Width="90" DisplayMemberBinding="{Binding ChipTime}" x:Name="ChipTimeHeader" />
-                    <GridViewColumn Header="Bib" Width="50" DisplayMemberBinding="{Binding Bib}" />
-                    <GridViewColumn Header="Name" Width="130" DisplayMemberBinding="{Binding ParticipantName}" />
-                    <GridViewColumn Header="Pl" Width="40" DisplayMemberBinding="{Binding PlaceStr}"/>
-                    <GridViewColumn Header="G" Width="25" DisplayMemberBinding="{Binding PrettyGender}" />
-                    <GridViewColumn Header="GP" Width="40" DisplayMemberBinding="{Binding GenderPlaceStr}"/>
-                    <GridViewColumn Header="Age Grp" Width="55" DisplayMemberBinding="{Binding AgeGroupName}" />
-                    <GridViewColumn Header="AP" Width="40" DisplayMemberBinding="{Binding AgePlaceStr}"/>
-                    <GridViewColumn Header="Distance" Width="60" DisplayMemberBinding="{Binding DistanceName}" />
-                    <GridViewColumn Header="T" Width="20" DisplayMemberBinding="{Binding PrettyType}"/>
-                    <GridViewColumn Header="Segment" Width="70" DisplayMemberBinding="{Binding SegmentName}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <ScrollViewer
+            x:Name="scrollViewer"
+            VerticalAlignment="Stretch"
+            HorizontalAlignment="Stretch"
+            HorizontalScrollBarVisibility="Auto"
+            VerticalScrollBarVisibility="Auto"
+            >
+            <StackPanel>
+                <ListView
+                    x:Name="updateListView" 
+                    VerticalAlignment="Stretch" 
+                    HorizontalAlignment="Stretch"
+                    VerticalContentAlignment="Top"
+                    SelectionMode="Single"
+                    Loaded="UpdateListView_Loaded" 
+                    HorizontalContentAlignment="Center"
+                    FontSize="12" 
+                    MouseDoubleClick="UpdateListView_MouseDoubleClick"
+                    ScrollViewer.CanContentScroll="False"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    PreviewMouseWheel="updateListView_PreviewMouseWheel"
+                    >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="70"/>
+                                    <ColumnDefinition Width="30"/>
+                                    <ColumnDefinition Width="130"/>
+                                    <ColumnDefinition Width="90"/>
+                                    <ColumnDefinition Width="90"/>
+                                    <ColumnDefinition Width="50"/>
+                                    <ColumnDefinition Width="130"/>
+                                    <ColumnDefinition Width="40"/>
+                                    <ColumnDefinition Width="25"/>
+                                    <ColumnDefinition Width="40"/>
+                                    <ColumnDefinition Width="55"/>
+                                    <ColumnDefinition Width="40"/>
+                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition Width="20"/>
+                                    <ColumnDefinition Width="70"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding LocationName}"/>
+                                <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Occurrence}"/>
+                                <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding SysTime}"/>
+                                <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Time}"/>
+                                <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding ChipLapTime}"/>
+                                <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Bib}"/>
+                                <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding ParticipantName}"/>
+                                <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding PlaceStr}"/>
+                                <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding PrettyGender}"/>
+                                <TextBlock Grid.Column="9" Margin="4,4" Text="{Binding GenderPlaceStr}"/>
+                                <TextBlock Grid.Column="10" Margin="4,4" Text="{Binding AgeGroupName}"/>
+                                <TextBlock Grid.Column="11" Margin="4,4" Text="{Binding AgePlaceStr}"/>
+                                <TextBlock Grid.Column="12" Margin="4,4" Text="{Binding DistanceName}"/>
+                                <TextBlock Grid.Column="13" Margin="4,4" Text="{Binding PrettyType}"/>
+                                <TextBlock Grid.Column="14" Margin="4,4" Text="{Binding SegmentName}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Grid Margin="5,0"
+                      PreviewMouseWheel="updateListView_PreviewMouseWheel">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="70"/>
+                        <ColumnDefinition Width="30"/>
+                        <ColumnDefinition Width="130"/>
+                        <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="90"/>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="130"/>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition Width="55"/>
+                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition Width="60"/>
+                        <ColumnDefinition Width="20"/>
+                        <ColumnDefinition Width="70"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Margin="4,4" Text="Loc"/>
+                    <TextBlock Grid.Column="1" Margin="4,4" Text="Occ"/>
+                    <TextBlock Grid.Column="2" Margin="4,4" Text="System Time"/>
+                    <TextBlock Grid.Column="3" Margin="4,4" Text="Time"/>
+                    <TextBlock Grid.Column="4" Margin="4,4" Text="Chip Time" x:Name="ChipTimeHeader"/>
+                    <TextBlock Grid.Column="5" Margin="4,4" Text="Bib"/>
+                    <TextBlock Grid.Column="6" Margin="4,4" Text="Name"/>
+                    <TextBlock Grid.Column="7" Margin="4,4" Text="Pl"/>
+                    <TextBlock Grid.Column="8" Margin="4,4" Text="G"/>
+                    <TextBlock Grid.Column="9" Margin="4,4" Text="GP"/>
+                    <TextBlock Grid.Column="10" Margin="4,4" Text="Age Grp"/>
+                    <TextBlock Grid.Column="11" Margin="4,4" Text="AP"/>
+                    <TextBlock Grid.Column="12" Margin="4,4" Text="Distance"/>
+                    <TextBlock Grid.Column="13" Margin="4,4" Text="T"/>
+                    <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
+                </Grid>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
-</Page>
+</ui:UiPage>
