--- a/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
+++ b/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
@@ -1,35 +1,64 @@
-﻿<Window x:Class="Chronokeep.ChipPersonWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.ChipPersonWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="ChipPersonWindow" Height="800" Width="800"
         WindowState="Maximized" WindowStyle="None"
         Closing="Window_Closing" KeyUp="Window_KeyUp"
+        d:DataContext="{d:DesignInstance local:ChipPersonWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="1*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Button Content="Exit" Name="Exit" Click="Exit_Click" Width="50" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Margin="5,5,5,5"/>
-        <Label FontSize="20" Name="Bib" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="1"/>
-        <Label FontSize="20" Name="Chip" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="1"/>
-        <Label FontSize="60" Name="First" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="2"/>
-        <Label FontSize="60" Name="Last" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2"/>
-        <Label FontSize="60" Name="Unknown" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.RowSpan="2" Grid.Row="2" />
-        <Label FontSize="60" Name="Age" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="3"/>
-        <Label FontSize="60" Name="Gender" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="3"/>
-        <Label FontSize="60" Name="Distance" HorizontalAlignment="Center" Grid.ColumnSpan="2" Grid.Row="4"/>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <Button Content="Exit" Name="Exit" Click="Exit_Click" Width="50" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="0" Margin="5,5,5,5"/>
+            <TextBlock FontSize="20" Name="Bib" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="1"/>
+            <TextBlock FontSize="20" Name="Chip" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="1"/>
+            <TextBlock FontSize="60" Name="First" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="2"/>
+            <TextBlock FontSize="60" Name="Last" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="2"/>
+            <TextBlock FontSize="60" Name="Unknown" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="2" Grid.RowSpan="2" Grid.Row="2" />
+            <TextBlock FontSize="60" Name="Age" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="3"/>
+            <TextBlock FontSize="60" Name="Gender" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="3"/>
+            <TextBlock FontSize="60" Name="Distance" HorizontalAlignment="Center" Grid.ColumnSpan="2" Grid.Row="4"/>
+        </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
