--- a/ChronoKeep/UI/UHF RFID Reader/ChipReaderWindow.xaml
+++ b/ChronoKeep/UI/UHF RFID Reader/ChipReaderWindow.xaml
@@ -1,46 +1,75 @@
-﻿<Window x:Class="Chronokeep.ChipReaderWindow"
+﻿<ui:UiWindow x:Class="Chronokeep.ChipReaderWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
         Title="ChipReaderWindow" Height="350" Width="525"
         Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:ChipReaderWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
         >
     <Grid>
-        <ListView x:Name="chipNumbers" Height="Auto" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="5,5,5,35">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn Header="Dec Number" Width="Auto" DisplayMemberBinding="{Binding DecNumber}" />
-                    <GridViewColumn Header="Hex Number" Width="Auto" DisplayMemberBinding="{Binding HexNumber}" />
-                    <GridViewColumn Header="Ant Number" Width="Auto" DisplayMemberBinding="{Binding AntennaNumber}" />
-                    <GridViewColumn Header="Dev NUmber" Width="Auto" DisplayMemberBinding="{Binding DeviceNumber}" />
-                    <GridViewColumn Header="Data" Width="Auto" DisplayMemberBinding="{Binding DataRep}" />
-                    <GridViewColumn Header="Read Number" Width="Auto" DisplayMemberBinding="{Binding ReadNumber}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
-        <Grid VerticalAlignment="Bottom" Height="35" Width="Auto" HorizontalAlignment="Center" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <DockPanel Margin="2" Grid.Column="0" Grid.ColumnSpan="2" Name="EventPickerHolder">
-                <Label Content="Event"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto"/>
-                <ComboBox Name="eventCB" Height="Auto" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" />
-            </DockPanel>
-            <DockPanel Margin="2" Grid.Column="0" Grid.ColumnSpan="2" Name="EventNameHolder" Visibility="Hidden">
-                <Label Content="TEST" VerticalAlignment="Center" Name="eventName"/>
-            </DockPanel>
-            <Label Content="Serial Port" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto" Grid.Column="2" />
-            <ComboBox Name="serialPortCB" Height="Auto" Width="70" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" />
-            <Button Content="Refresh" Name="refreshBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="4" Click="RefreshBtn_Click" />
-            <Button Content="Connect" Name="connectBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="5" Click="ConnectBtn_Click" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <Grid>
+            <ListView x:Name="chipNumbers" Height="Auto" Width="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="5,5,5,35">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Dec Number" Width="Auto" DisplayMemberBinding="{Binding DecNumber}" />
+                        <GridViewColumn Header="Hex Number" Width="Auto" DisplayMemberBinding="{Binding HexNumber}" />
+                        <GridViewColumn Header="Ant Number" Width="Auto" DisplayMemberBinding="{Binding AntennaNumber}" />
+                        <GridViewColumn Header="Dev NUmber" Width="Auto" DisplayMemberBinding="{Binding DeviceNumber}" />
+                        <GridViewColumn Header="Data" Width="Auto" DisplayMemberBinding="{Binding DataRep}" />
+                        <GridViewColumn Header="Read Number" Width="Auto" DisplayMemberBinding="{Binding ReadNumber}" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
+            <Grid VerticalAlignment="Bottom" Height="35" Width="Auto" HorizontalAlignment="Center" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <DockPanel Margin="2" Grid.Column="0" Grid.ColumnSpan="2" Name="EventPickerHolder">
+                    <TextBlock Text="Event"  HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto"/>
+                    <ComboBox Name="eventCB" Height="Auto" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                </DockPanel>
+                <DockPanel Margin="2" Grid.Column="0" Grid.ColumnSpan="2" Name="EventNameHolder" Visibility="Hidden">
+                    <TextBlock Text="TEST" VerticalAlignment="Center" Name="eventName"/>
+                </DockPanel>
+                <TextBlock Text="Serial Port" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto" Grid.Column="2" />
+                <ComboBox Name="serialPortCB" Height="Auto" Width="70" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" />
+                <Button Content="Refresh" Name="refreshBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="4" Click="RefreshBtn_Click" />
+                <Button Content="Connect" Name="connectBtn" Width="Auto" Padding="10,0,10,0" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="5" Click="ConnectBtn_Click" />
+            </Grid>
         </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
